--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "framer-motion": "^6",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.31.3"
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
