--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@chakra-ui/react": "1.8.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/quicksand": "^4.5.9",
     "framer-motion": "^6",
     "next": "latest",
     "react": "^17.0.2",
