--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.1",
     "react-hook-form": "^7.31.3"
   },
   "devDependencies": {
