--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/quicksand": "^4.5.9",
+    "axios": "^0.27.2",
     "framer-motion": "^6",
     "next": "latest",
     "react": "^17.0.2",
